# ocr-reader

./: .style.yapf  README.md  main.py  pyproject.toml
